fix link errors,change colors and contrast, add area

--- a/style.css
+++ b/style.css
@@ -316,16 +316,20 @@ a:hover {
 }
 
 .navbar .nav {
-    padding-top: 2px;
-    margin-right: 96px;
-    float: right;
-    z-index: 1;
+display: flex;
+flex-direction: row;
 }
+
 
 .nav > li {
     float: left;
     margin-top: 4px;
     font-size: 16px;
+
+}
+
+.nav > li > a {
+    margin-right: 20px;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -364,18 +368,39 @@ a:hover {
 
 .citationTitle {
     font-size: 20px;
+    font-style: italic;
+    text-align: center;
 }
 .text-center {
     text-align: center;
 }
+
+.flexCentre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexColumnCentre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
 @media (min-width: 768px) {
-    .site-navigation {
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
+    .bloc {
+        text-align: center;
+        justify-content: center;
     }
+    .site-navigation {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
         color: #484848;
@@ -444,7 +469,7 @@ nav .caret {
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
-    background-color:#0A0A0A;
+    background-color:#FAEF1D;
 }
 
 .mg-lg {
@@ -469,6 +494,7 @@ nav .caret {
 
 button {
     outline: none!important;
+    cursor: pointer;
 }
 
 .btn-rd {
@@ -707,8 +733,12 @@ p {
 }
 
 .social {
-    max-width: 400px;
+    max-width: 600px;
     margin: auto auto auto auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
 h2 {
@@ -720,7 +750,7 @@ h3 {
     font-size: 20px;
     text-transform: uppercase;
     font-weight: 700;
-    color:#DF8F6A!important;
+    color:#404040!important;
 }
 
 .med-width-whitespace {
@@ -781,6 +811,10 @@ h4 {
     background-color: #F3976C;
 }
 
+.bgc-atomic-yellow {
+    background-color: #F5C623;
+  }
+
 .bgc-lightgray {
     background-color: #C7C7C7;
 }
@@ -789,8 +823,8 @@ h4 {
     color: #000000;
 }
 
-.margin-title {
-    margin-right: 102px;
+.tc-title-black {
+   color: #030303!important;
 }
 
 .btn-atomic-tangerine {
@@ -927,6 +961,8 @@ h4 {
         padding-top: 0;
         border-top: 1px solid rgba(0, 0, 0, .2);
         float: none!important;
+        align-items: center;
+        justify-content: center;
     }
     .navbar.row {
         margin-left: 0;
@@ -971,6 +1007,9 @@ h4 {
         right: -1px;
     }
     .navbar-collapse {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
         padding: 0;
         overflow-x: hidden;
         -webkit-box-shadow: none;
@@ -1040,6 +1079,14 @@ h4 {
     .blocsapp-device-iphone5 img {
         width: 180px;
         height: 320px;
+    }
+
+    .col-sm-6 {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+          
     }
 }
 
